--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Infinity Passage</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;700&display=swap');
@@ -16,7 +16,7 @@
         body, html {
             height: 100%;
             font-family: 'Cairo', sans-serif;
-            overflow: hidden;
+            overflow-x: hidden;
         }
         
         .background {
@@ -40,7 +40,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            min-height: 100vh;
             text-align: center;
             color: white;
             padding: 20px;
@@ -91,6 +91,7 @@
             font-size: 2.5rem;
             font-weight: bold;
             text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+            margin-bottom: 20px;
         }
         
         .services {
@@ -139,16 +140,21 @@
         }
 
         .footer {
-            position: absolute;
-            bottom: 20px;
+            position: relative;
             text-align: center;
             width: 100%;
             color: white;
             font-size: 0.9rem;
             opacity: 0.7;
+            margin-top: 20px;
+            padding: 10px;
         }
 
         @media (max-width: 600px) {
+            .container {
+                padding: 10px;
+            }
+
             .glass-container {
                 width: 95%;
                 padding: 20px;
@@ -161,6 +167,31 @@
 
             .logo {
                 font-size: 2rem;
+            }
+
+            .footer {
+                position: relative;
+                bottom: 0;
+                left: 0;
+                padding: 10px;
+                font-size: 0.8rem;
+            }
+        }
+
+        /* إضافة دعم للشاشات الصغيرة جداً */
+        @media (max-width: 350px) {
+            .logo-img {
+                width: 120px;
+                height: 120px;
+            }
+
+            .logo {
+                font-size: 1.8rem;
+            }
+
+            .service-btn {
+                padding: 10px 20px;
+                font-size: 0.9rem;
             }
         }
     </style>
