--- a/index.html
+++ b/index.html
@@ -212,11 +212,13 @@
                 <a href="https://inpassage.github.io/phoneme/" class="service-btn" target="_blank">البحث عن الرقم</a>
             </div>
         </div>
-        <div class="footer">
-            © 2025 Infinity Passage. جميع الحقوق محفوظة.
-        </div>
+        <!-- قسم الحقوق -->
+	<body>
+	
+    <div class="footer">
+        <p>&copy; 2024 <a href="https://inpa-tbc.github.io/">InPa-TBC</a>. PORWERED BY</p>
     </div>
-
+    
     <script>
         // Interactive background effect
         const background = document.querySelector('.background');
